/*
 * $Id: ChangeLog,v 1.1780 2003/11/26 23:12:37 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2003-11-26 22:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  ! utils/hbmake/hbmake.prg
    % minor fix


2003-11-27 00:15 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/hash.c
    % rationalization of garbage reclaim routine.

  * tests/hashmass.prg
    * visual adjustments

2003-11-27 00:03 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapi.h
  * source/vm/classes.c
    * hb_objSendMessage now returns the VM Return pointer so that it can
      be used in non-thread specivic 3d party libs to access object
      properties and method call results.
    - removed hb_obj(Get|Set)PropValue

2003-11-26 22:59 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapi.h
  * include/hbapiitm.h
  * include/hbvmpub.h
  * source/vm/classes.c
  * source/vm/extend.c
  * source/vm/fastitem.c
  * source/vm/garbage.c
  * source/vm/thread.c
    ! reverted changes on HB_IT_POINTER structure, using standard GC
      finalizator instead.

  * tests/mtcomplex.prg
    * Testing for mutex correct finalization


2003-11-26 23:10 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * make_drw.sh
    * Added HB_MT=no - threads don't work on Darwin yet.
  * config/darwin/gcc.cf
    * Fixed ld syntax.
  * source/pp/ppcore.c
    ! Fixed a bug in ReplacePattern() when lenreal == 0.
  * source/rtl/hbserv.c
    * Added `#if !defined(HB_OS_DARWIN)' - Darwin signal APIs differ from
      the Linux signal APIs a lot.

2003-11-26 20:40 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/hvm.c
    * using hb_vm_* prefix also in MT for enums and withobject
     (by define aliasing)

  * tests/mtcomplex.prg